; ModuleID = '/home/carl/AnghaBench/mpv/misc/extr_json.c_json_append_str.c'
source_filename = "/home/carl/AnghaBench/mpv/misc/extr_json.c_json_append_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpv_node = type { i32 }
%struct.TYPE_4__ = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, %struct.mpv_node*, i32)* @json_append_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @json_append_str(i8** %0, %struct.mpv_node* %1, i32 %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca %struct.mpv_node*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__, align 8
  %8 = alloca i32, align 4
  store i8** %0, i8*** %4, align 8
  store %struct.mpv_node* %1, %struct.mpv_node** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i8**, i8*** %4, align 8
  %10 = load i8*, i8** %9, align 8
  %11 = call i8* @bstr0(i8* %10)
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  store i8* %11, i8** %12, align 8
  %13 = load %struct.mpv_node*, %struct.mpv_node** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @json_append(%struct.TYPE_4__* %7, %struct.mpv_node* %13, i32 %14)
  store i32 %15, i32* %8, align 4
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = load i8**, i8*** %4, align 8
  store i8* %17, i8** %18, align 8
  %19 = load i32, i32* %8, align 4
  ret i32 %19
}

declare dso_local i8* @bstr0(i8*) #1

declare dso_local i32 @json_append(%struct.TYPE_4__*, %struct.mpv_node*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
